# whisper-stream

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.py
whisper_tools/: __init__.py  audio_utils.py  logger.py  whisper_api.py  whisper_local.py
